--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         - Click a tile to move<br>
         - Arrow Keys or WASD to move</p>
         <p><strong>Rules:</strong><br>
-        - You start with 3 moves<br>
+        - You get 3 moves per level<br>
         - Each move shrinks your slime<br>
         - Collect blobs for extra moves<br>
         - Avoid traps (lava) or die<br>
